--- a/EncryptionStudy/Base.lproj/Main.storyboard
+++ b/EncryptionStudy/Base.lproj/Main.storyboard
@@ -16,11 +16,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ndD-od-QhO">
+                                <rect key="frame" x="250" y="250" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="dVd-nm-ZB2"/>
+                                    <constraint firstAttribute="width" constant="100" id="neH-OT-uaq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="指纹解锁"/>
+                                <connections>
+                                    <action selector="fingerPrintLockButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fvM-Qg-XAh"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ndD-od-QhO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2OH-bk-gFz"/>
+                            <constraint firstItem="ndD-od-QhO" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YQV-av-QhK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="613" y="198"/>
         </scene>
     </scenes>
 </document>
